constraints/ns-routes-must-have-whitelist-annotation/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: requiredwhitelistannotations
tests:
- name: block-empty-route-whitelist
  template: ../../templates/requiredannotations/template.yaml
  constraint: constraint.yaml
  cases:
  - name: example-allowed
    object: samples/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-disallowed
    object: samples/example_disallowed.yaml
    assertions:
    - violations: yes
